// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupedColumn using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot grouped-bar"
      clip-path="url(#clip-path-test)"
    >
      <g>
        <rect
          class="bar"
          height="23"
          style="stroke: #ffffff; fill: #99c1dc; opacity: 0.7;"
          width="0"
          x="0"
          y="2"
        />
        <rect
          class="bar"
          height="23"
          style="stroke: #ffffff; fill: #fc998e; opacity: 0.7;"
          width="0"
          x="0"
          y="26"
        />
      </g>
      <g>
        <rect
          class="bar"
          height="23"
          style="stroke: #ffffff; fill: #99c1dc; opacity: 0.7;"
          width="0"
          x="0"
          y="52"
        />
        <rect
          class="bar"
          height="23"
          style="stroke: #ffffff; fill: #fc998e; opacity: 0.7;"
          width="0"
          x="0"
          y="76"
        />
      </g>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`GroupedColumn using SVG should skip rendering if there is no x scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot grouped-bar"
      clip-path="url(#clip-path-test)"
    />
  </svg>
</DocumentFragment>
`;

exports[`GroupedColumn using SVG should skip rendering if there is no y scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot grouped-bar"
      clip-path="url(#clip-path-test)"
    />
  </svg>
</DocumentFragment>
`;
